         and update copyright date to 2013 (Sergio).
20130103 configure.ac,fuse.c,README: add trailing slashes to URLs where
         appropriate (Stuart).
20130103 peripherals/disk/disciple.c: fix inverted printer busy logic (Stuart).
20130104 ui/win32/win32ui.c: empty sound buffer when emulation is paused using a
         shortcut key on Win32 UI (thanks, Lee Tonks) (Sergio).
20130105 roms/{Makefile.am,README.copyright,disciple.rom}: add DISCiPLE ROM 
         with EPSON printer support (Fred).
20130106 compat/mkstemp.c: remove unused variable (Sergio).
20130106 peripherals/disk/disciple.c: swap order of ROM banks (Stuart).
20130107 man/fuse.1: initial documentation of the drive emulation flags
         (bug #250) (Fred).
20130123 memory.c: correct restore of pentagon 1024 memory ports from snapshots
         (bug #275) (rkd77).
20130126 peripherals/nic/w5100_socket.c: make sure write_pending member of 
         nic_w5100_socket_t is initialised (bug #275) (rkd77).
20130126 machines/spec_se.c: make sure that RAM variables are initialised before
         they are referenced (more from bug #275) (rkd77).
20130126 man/fuse.1,peripherals/printer.c,settings.dat,ui/options.dat:
         add separate switch to enable ZX Printer emulation (bug #274) (Fred).
20130127 machines/spec_se.c: fix SE writing dock and exrom pages to snapshots
         (Fred).
20130127 lib/{compressed/tape_se.szx,uncompressed/tape_se.szx},man/fuse.1,
         roms/{README.copyright,se-0.rom,se-1.rom},tape.c: update SE ROMs to
         v4.04 (Fred).
20130128 peripherals/disk/{beta.c,disciple.c,opus.c,plusd.c},
         peripherals/ide/divide.c,peripherals/{if1.c,if2.c,scld.c,speccyboot.c,
         spectranet.c}: make sure that an associated peripheral is enabled
         before running it's associated memory_map function (bug #276) (Fred).
20130128 peripherals/nic/w5100_socket.c: ensure we don't read bogus data on
         UDP writes (bug #271).